--- a/index.html
+++ b/index.html
@@ -226,9 +226,48 @@
 </div>
 
         </section>
+
+
     </main>
 
+    <!-- Footer Section -->
     <footer>
+
+
+
+<div class="flex justify-between py-11 px-24 items-center grid grid-cols-1 md:grid-cols-2" >
+
+<div class="shoping-container mt-20 py-9 ">
+<!-- Icon box-1 -->
+<div class="flex gap-10 shadow-lg mb-4 ">
+   <div> <img width="60" src="icons/house.png" alt=""></div>
+    <div class="ml-3">
+        <h3 class="text-[#363958] text-xl font-bold">Find the Perfect Fit</h3>
+        <p class="text-[#3E3E3E] text-xs">Everybody is different, which is why we <br>
+            offer styles for every body.</p></div>
+</div>
+<!-- Icon box-2 -->
+<div class="flex gap-10 shadow-lg mb-4">
+   <div> <img width="60" src="icons/box.png" alt=""></div>
+    <div class="ml-3">
+        <h3 class="text-[#363958] text-xl font-bold">Free Exchanges</h3>
+        <p class="text-[#3E3E3E] text-xs">Everybody is different, which is why we <br>
+            offer styles for every body.</p></div>
+</div>
+<!-- Icon box-3 -->
+<div class="flex gap-10 shadow-lg">
+   <div> <img width="60" src="icons/question.png" alt=""></div>
+    <div class="ml-3">
+        <h3 class="text-[#363958] text-xl font-bold">Contact Our Seller</h3>
+        <p class="text-[#3E3E3E] text-xs">Everybody is different, which is why we <br>
+            offer styles for every body.</p></div>
+</div>
+
+
+</div>
+
+<img width="500" src="images/shopping.png" alt="">
+</div>
 
     </footer>
 
